# iam-normalizer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: iam.rs  main.rs  normalize.rs
tests/: integration_test.rs
tests/data/policies/identity/: unsorted_actions.json  unsorted_not_action.json  unsorted_not_resources.json  unsorted_resources.json  with_condition.json  with_condition_single_val.json
tests/data/policies/identity/expect/: unsorted_actions.json  unsorted_not_resources.json
tests/data/policies/identity/unsorted_not_action/: expect.json  input.json
tests/data/policies/identity/unsorted_resources/: expect.json
tests/data/policies/identity/with_condition_single_val/: expect.json
tests/data/policies/resource/: s3_resource_policy.json
tests/data/policies/resource/s3_aws_principal/: expect.json  input.json
tests/data/policies/resource/s3_wildcard_principal/: expect.json
