[package]
name = "iam_normalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.2"
